# zooprocess-multiple-classifier

./: .gitignore  Dockerfile  JenkinsConstants.groovy  LICENSE  README.md  ai4-metadata.yml  metadata.json  project.Rproj  pyproject.toml  requirements-test.txt  requirements.txt  tox.ini
.sqa/: config.yml  docker-compose.yml
ai4os_zooprocess_multiple_classifier/: api.py  config.py  utils.py
sandbox/: deepaas_debug_main.py
tests/: test_api.py
zooprocess_multiple_classifier/: api.py  config.py  misc.py  train.py  utils.py
zooprocess_multiple_classifier/api/: __init__.py
zooprocess_multiple_classifier/lib_jo/: deep_zooscan.py  train_model_jo.py
